--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="flex-container">
             <div class="box 1">
              <div class="head">
-                <h2>primera foto fot</h2>
+                <h2>Primera foto</h2>
                 <div class ="date">18/09  </div>
              </div>
              <div class = "photo">
